CMake: fix scope for -DHAS_BOOST_CHRONO
:hankey:

Previously, this could lead to invalid writes and segfaults, because the base
library would have a boost version of CpuTimer, and the model extension would
have or assume a non-boost version of CpuTimer. I don't know whether or how it
is defined which definition would be used. I only found one environment where
this would happen (segfaults on gcc/12.2.0, boost/1.82.0 (e.g. `valgrind python -c "import SomeModel as m; model = m.getModel(); model.getSolver()"`);
no problems with gcc/12.3.0 boost/1.74.0).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -296,7 +296,7 @@ if("$ENV{ENABLE_AMICI_DEBUGGING}"
 endif()
 
 target_compile_definitions(
-  ${PROJECT_NAME} PRIVATE $<$<BOOL:${Boost_CHRONO_FOUND}>:HAS_BOOST_CHRONO>)
+  ${PROJECT_NAME} PUBLIC $<$<BOOL:${Boost_CHRONO_FOUND}>:HAS_BOOST_CHRONO>)
 
 target_link_libraries(
   ${PROJECT_NAME}
