--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -53,6 +53,9 @@ jobs:
           https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip \
         && unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/ \
 
+    - name: Install apt dependencies
+      uses: ./.github/actions/install-apt-dependencies
+
     # install amici dependencies
     - name: apt
       run: |
@@ -60,12 +63,7 @@ jobs:
           && sudo apt-get install -y \
             cmake \
             g++ \
-            libatlas-base-dev \
-            libboost-serialization-dev \
-            libboost-chrono-dev \
-            libhdf5-serial-dev \
             python3-venv \
-            swig \
             lcov \
             libboost-math-dev
 
