--- a/.github/workflows/test_python_ver_matrix.yml
+++ b/.github/workflows/test_python_ver_matrix.yml
@@ -41,15 +41,8 @@ jobs:
       with:
         fetch-depth: 20
 
-    # install dependencies
-    - name: apt
-      run: |
-        sudo apt-get update \
-          && sudo apt-get install -y \
-          swig \
-          libatlas-base-dev \
-          libhdf5-serial-dev \
-          libboost-math-dev
+    - name: Install apt dependencies
+      uses: ./.github/actions/install-apt-dependencies
 
     # install AMICI
     - name: Build BNGL
