--- a/.github/workflows/test_valgrind.yml
+++ b/.github/workflows/test_valgrind.yml
@@ -34,6 +34,9 @@ jobs:
     - uses: actions/checkout@v3
     - run: git fetch --prune --unshallow
 
+    - name: Install apt dependencies
+      uses: ./.github/actions/install-apt-dependencies
+
     # install amici dependencies
     - name: apt
       run: |
@@ -41,13 +44,8 @@ jobs:
           && sudo apt-get install -y \
             cmake \
             g++ \
-            libatlas-base-dev \
-            libboost-serialization-dev \
-            libhdf5-serial-dev \
             python3-venv \
-            swig \
-            valgrind \
-            libboost-math-dev
+            valgrind
 
     - name: Build AMICI
       run: |
