GHA: Cleanup custom swig usage
* Previously the newest swig was downloaded and built, but not used because of a wrong path. Fixed here.
* Make scripts/downloadAndBuildSwig.sh accept a version number argument
* Use composite action to make it more maintainable and avoid issues as fixed above

--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -24,12 +24,9 @@ jobs:
       with:
         fetch-depth: 20
 
-    - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
-    - run: echo "SWIG=${AMICI_DIR}/ThirdParty/swig-4.0.1/install/bin/swig" >> $GITHUB_ENV
+    - uses: ./.github/actions/setup-swig
 
-    - name: Build swig4
-      run: |
-        sudo scripts/downloadAndBuildSwig.sh
+    - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
 
     - name: sdist
       run: |
