--- a/.github/workflows/test_doc.yml
+++ b/.github/workflows/test_doc.yml
@@ -16,7 +16,6 @@ on:
 jobs:
   doxygen:
     name: Test Doxygen
-
     runs-on: ubuntu-22.04
 
     strategy:
@@ -32,26 +31,14 @@ jobs:
     - uses: actions/checkout@v3
     - run: git fetch --prune --unshallow
 
-    - name: apt
-      run: |
-        sudo apt-get update \
-          && sudo apt-get install -y \
-          bison \
-          ragel \
-          graphviz \
-          texlive-latex-extra
-
-    - name: Build doxygen
-      run: |
-        sudo scripts/downloadAndBuildDoxygen.sh
+    - name: Set up doxygen
+      uses: ./.github/actions/setup-doxygen
 
     - name: Run doxygen
-      run: |
-        scripts/run-doxygen.sh
+      run: scripts/run-doxygen.sh
 
   sphinx:
     name: Test Sphinx
-
     runs-on: ubuntu-22.04
 
     strategy:
@@ -70,9 +57,8 @@ jobs:
       - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
       - run: echo "SWIG=${AMICI_DIR}/ThirdParty/swig-4.1.1/install/bin/swig" >> $GITHUB_ENV
 
-      - name: Build doxygen
-        run: |
-          sudo scripts/downloadAndBuildDoxygen.sh
+      - name: Set up doxygen
+        uses: ./.github/actions/setup-doxygen
 
       # install amici dependencies
       - name: apt
@@ -90,5 +76,4 @@ jobs:
           sudo scripts/downloadAndBuildSwig.sh
 
       - name: sphinx
-        run: |
-          scripts/run-sphinx.sh
+        run: scripts/run-sphinx.sh
