--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -22,17 +22,14 @@ jobs:
 
     - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
 
-    # install amici dependencies
+    - name: Install apt dependencies
+      uses: ./.github/actions/install-apt-dependencies
+
     - name: apt
       run: |
         sudo apt-get update \
           && sudo apt-get install -y \
-            cmake \
-            g++ \
-            libatlas-base-dev \
-            libboost-serialization-dev \
-            libhdf5-serial-dev \
-            swig
+            cmake
 
     - name: Build suitesparse
       run: |
@@ -70,16 +67,8 @@ jobs:
 
     - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
 
-    # install amici dependencies
-    - name: apt
-      run: |
-        sudo apt-get update \
-          && sudo apt-get install -y \
-            g++ \
-            libatlas-base-dev \
-            libboost-serialization-dev \
-            libhdf5-serial-dev \
-            swig
+    - name: Install apt dependencies
+      uses: ./.github/actions/install-apt-dependencies
 
     - name: Create AMICI sdist
       run: |
