--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -35,23 +35,11 @@ jobs:
     - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
     - run: echo "BNGPATH=${GITHUB_WORKSPACE}/ThirdParty/BioNetGen-2.7.0" >> $GITHUB_ENV
 
-    # sonar cloud
-    - run: echo "SONAR_SCANNER_VERSION=5.0.1.3006" >> $GITHUB_ENV
-    - run: echo "SONAR_SCANNER_HOME=${HOME}/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux" >> $GITHUB_ENV
-    - run: echo "SONAR_SCANNER_OPTS=-server" >> $GITHUB_ENV
-    - run: echo "${SONAR_SCANNER_HOME}/bin" >> $GITHUB_PATH
-    - run: echo "${HOME}/.sonar/build-wrapper-linux-x86" >> $GITHUB_PATH
+    - name: Set up Sonar tools
+      uses: ./.github/actions/setup-sonar-tools
 
-    # TODO: add to ci image
-    - name: Install sonarcloud tools
-      run: |
-        sudo apt-get install nodejs curl unzip \
-        && curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip \
-          https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux.zip \
-        && unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/ \
-        && curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip \
-          https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip \
-        && unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/ \
+    - name: Install apt dependencies
+      uses: ./.github/actions/install-apt-dependencies
 
     # install amici dependencies
     - name: apt
@@ -60,12 +48,7 @@ jobs:
           && sudo apt-get install -y \
             cmake \
             g++ \
-            libatlas-base-dev \
-            libboost-serialization-dev \
-            libboost-chrono-dev \
-            libhdf5-serial-dev \
             python3-venv \
-            swig \
             lcov \
             libboost-math-dev
 
