--- a/.github/workflows/test_valgrind.yml
+++ b/.github/workflows/test_valgrind.yml
@@ -14,8 +14,6 @@ on:
 jobs:
   valgrind_cpp:
     name: Valgrind C++
-
-    # TODO: prepare image with more deps preinstalled
     runs-on: ubuntu-22.04
 
     strategy:
@@ -47,12 +45,10 @@ jobs:
             valgrind
 
     - name: Build AMICI
-      run: |
-        scripts/buildAll.sh
+      run: scripts/buildAll.sh
 
     - name: C++ tests / Valgrind
-      run: |
-        scripts/run-valgrind-cpp.sh
+      run: scripts/run-valgrind-cpp.sh
 
   valgrind_python:
     name: Valgrind Python
@@ -88,13 +84,10 @@ jobs:
             valgrind
 
     - name: Build AMICI
-      run: |
-        scripts/buildAll.sh
+      run: scripts/buildAll.sh
 
     - name: Install python package
-      run: |
-        scripts/installAmiciSource.sh
+      run: scripts/installAmiciSource.sh
 
     - name: Python tests / Valgrind
-      run: |
-        scripts/run-valgrind-py.sh
+      run: scripts/run-valgrind-py.sh
