--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -74,5 +74,5 @@ amici =
 
 ; amici_import_petab.py is kept for backwards compatibility
 console_scripts =
-    amici_import_petab = amici.petab_import:_main
-    amici_import_petab.py = amici.petab_import:_main
+    amici_import_petab = amici.petab.cli.import_petab:_main
+    amici_import_petab.py = amici.petab.cli.import_petab:_main
