--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -154,13 +154,11 @@ jobs:
     # Ensure CMake is using the python version that we will use for the python tests later on
     - run: echo "PYTHON_EXECUTABLE=${Python3_ROOT_DIR}/bin/python3" >> $GITHUB_ENV
     - run: echo "OpenMP_ROOT=$(brew --prefix)/opt/libomp" >> $GITHUB_ENV
+    - run: echo "BOOST_ROOT=$(brew --prefix)/opt/boost" >> $GITHUB_ENV
 
     # install amici dependencies
     - name: homebrew
-      run: |
-        brew install hdf5 swig gcc cppcheck libomp boost \
-          && echo LDFLAGS="-L/usr/local/lib/ -L$(brew --prefix)/opt/boost/lib/" >> $GITHUB_ENV \
-          && echo CPPFLAGS="-I $(brew --prefix)/opt/boost/include/" >> $GITHUB_ENV
+      run: brew install hdf5 swig gcc cppcheck libomp boost
 
     - name: Build AMICI
       run: scripts/buildAll.sh
