GHA: Fix actions for PRs from forks
* run codecov only on pull requests
* trigger relevant actions on `pull_request` instead of only on `push`

Closes #2218

--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -1,5 +1,5 @@
 name: Installation
-on: [push, merge_group, workflow_dispatch]
+on: [push, pull_request, merge_group, workflow_dispatch]
 
 jobs:
   archive:
