--- a/.github/workflows/test_sbml_semantic_test_suite.yml
+++ b/.github/workflows/test_sbml_semantic_test_suite.yml
@@ -54,7 +54,7 @@ jobs:
         path: tests/amici-semantic-results
 
     - name: Codecov SBMLSuite
-      if: github.event_name == 'pull_request'
+      if: github.event_name == 'pull_request' || github.repository_owner == 'AMICI-dev'
       uses: codecov/codecov-action@v3.1.0
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
