--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -85,7 +85,7 @@ jobs:
             tests/petab_test_suite/
 
       - name: Codecov
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' || github.repository_owner == 'AMICI-dev'
         uses: codecov/codecov-action@v3.1.0
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
