--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -95,6 +95,7 @@ jobs:
         fail_ci_if_error: true
 
     - name: Run sonar-scanner
+      if: github.repository_owner == 'AMICI-dev'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
