--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -43,6 +43,9 @@ include_package_data = True
 zip_safe = False
 
 [options.extras_require]
+# Don't include any URLs here - they are not supported by PyPI:
+#  HTTPError: 400 Bad Request from https://upload.pypi.org/legacy/
+#  Invalid value for requires_dist. Error: Can't have direct dependency: ...
 petab = petab>=0.2.1
 pysb = pysb>=1.13.1
 test =
