setup.cfg -> pyproject.toml
Let's reduce the number of package configuration files...

--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Remove direct dependencies from setup.cfg
       # Remove any "git+https"-based dependencies that are not supported
       #  by PyPI and are only required for testing.
-      run: sed -i '/git+https/d' python/sdist/setup.cfg
+      run: sed -i '/git+https/d' python/sdist/pyproject.toml
 
     - name: sdist
       run: scripts/buildSdist.sh
