--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -62,6 +62,7 @@ test =
     #  unsupported x86_64 / x86_64h
     antimony!=2.14; platform_system=='Darwin' and platform_machine in 'x86_64h'
     scipy
+    pooch
 vis =
     matplotlib
     seaborn
