Split expressions into static and dynamic
Split expressions in `w` into dynamic (explicitly or implicitly time-dependent) and static ones.
Evaluate static ones only when needed, i.e. after (re)initializing x_rdata or parameters.

See #1269

--- a/.github/actions/setup-amici-cpp/action.yml
+++ b/.github/actions/setup-amici-cpp/action.yml
@@ -18,6 +18,9 @@ runs:
     - run: echo "ENABLE_GCOV_COVERAGE=TRUE" >> $GITHUB_ENV
       shell: bash
 
+    - run: echo "PYTHONFAULTHANDLER=1" >> $GITHUB_ENV
+      shell: bash
+
     - name: Set up Sonar tools
       uses: ./.github/actions/setup-sonar-tools
 
