--- a/models/model_jakstat_adjoint/CMakeLists.txt
+++ b/models/model_jakstat_adjoint/CMakeLists.txt
@@ -1,5 +1,11 @@
 # Build AMICI model
 cmake_minimum_required(VERSION 3.15)
+cmake_policy(VERSION 3.15...3.27)
+
+# cmake >=3.27
+if(POLICY CMP0144)
+  cmake_policy(SET CMP0144 NEW)
+endif(POLICY CMP0144)
 
 project(model_jakstat_adjoint)
 
@@ -14,7 +20,7 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
 endif()
 foreach(flag ${MY_CXX_FLAGS})
   unset(CUR_FLAG_SUPPORTED CACHE)
-  check_cxx_compiler_flag(-Werror ${flag} CUR_FLAG_SUPPORTED)
+  check_cxx_compiler_flag(${flag} CUR_FLAG_SUPPORTED)
   if(${CUR_FLAG_SUPPORTED})
     string(APPEND CMAKE_CXX_FLAGS " ${flag}")
   endif()
@@ -32,6 +38,23 @@ endif()
 find_package(Amici  REQUIRED HINTS
              ${CMAKE_CURRENT_LIST_DIR}/../../build)
 message(STATUS "Found AMICI ${Amici_DIR}")
+
+# Debug build?
+if("$ENV{ENABLE_AMICI_DEBUGGING}" OR "$ENV{ENABLE_GCOV_COVERAGE}")
+  add_compile_options(-UNDEBUG)
+  if(MSVC)
+    add_compile_options(-DEBUG)
+  else()
+    add_compile_options(-O0 -g)
+  endif()
+  set(CMAKE_BUILD_TYPE "Debug")
+endif()
+
+# coverage options
+if($ENV{ENABLE_GCOV_COVERAGE})
+  string(APPEND CMAKE_CXX_FLAGS_DEBUG " --coverage")
+  string(APPEND CMAKE_EXE_LINKER_FLAGS_DEBUG " --coverage")
+endif()
 
 set(MODEL_DIR ${CMAKE_CURRENT_LIST_DIR})
 
@@ -74,18 +97,6 @@ if(NOT "${AMICI_PYTHON_BUILD_EXT_ONLY}")
   set(SRC_LIST_EXE main.cpp)
   add_executable(simulate_${PROJECT_NAME} ${SRC_LIST_EXE})
   target_link_libraries(simulate_${PROJECT_NAME} ${PROJECT_NAME})
-endif()
-
-# Debug build?
-if("$ENV{ENABLE_AMICI_DEBUGGING}" OR "$ENV{ENABLE_GCOV_COVERAGE}")
-  add_compile_options(-UNDEBUG -O0 -g)
-  set(CMAKE_BUILD_TYPE "Debug")
-endif()
-
-# coverage options
-if($ENV{ENABLE_GCOV_COVERAGE})
-  string(APPEND CMAKE_CXX_FLAGS_DEBUG " --coverage")
-  string(APPEND CMAKE_EXE_LINKER_FLAGS_DEBUG " --coverage")
 endif()
 
 # SWIG
