--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Install petab
         run: |
-          source ./build/venv/bin/activate \
+          source ./venv/bin/activate \
             && pip3 install wheel pytest shyaml pytest-cov pysb
 
       # retrieve test models
@@ -65,19 +65,19 @@ jobs:
         run: |
           git clone --depth 1 --branch main \
             https://github.com/PEtab-dev/petab_test_suite \
-            && source ./build/venv/bin/activate \
+            && source ./venv/bin/activate \
             && cd petab_test_suite && pip3 install -e .
 
       - name: Run PEtab-related unit tests
         run: |
-          source ./build/venv/bin/activate \
+          source ./venv/bin/activate \
             && pytest --cov-report=xml:coverage.xml \
               --cov=./ python/tests/test_*petab*.py python/tests/petab/
 
       # run test models
       - name: Run PEtab test suite
         run: |
-          source ./build/venv/bin/activate \
+          source ./venv/bin/activate \
           && AMICI_PARALLEL_COMPILE="" pytest -v \
             --cov-report=xml:coverage.xml \
             --cov-append \
